Sebi : Creation d'un CSS Eco-bio style, creation des pages dans espace perso : mes infos et mes commandes. Maj du header pour intégrer le css, Maj du footer pour intégrer le JS taboulus, MAJ du face config pour les chemins de navigation. Creation des pagesn partciper evenement creer evenement, achat par ecnhere et page vente.

--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/assets/bootstrap/css/ecobio-style.css
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/assets/bootstrap/css/ecobio-style.css
@@ -275,8 +275,8 @@ p {
 {
     border : 1px solid #eee;
     float :left;
-    margin-right: 20px;
-    margin-left: 20px;
+    //margin-right: px;
+   // margin-left: px;
     height: 100px;
 }
 #selection tr{
