--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/assets/bootstrap/css/ecobio-style.css
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/assets/bootstrap/css/ecobio-style.css
@@ -281,6 +281,15 @@ p {
     // margin-left: px;
     height: 100px;
 }
+
+#traitgauche2
+{
+    border : 1px solid #eee;
+    float :left;
+    //margin-right: px;
+    // margin-left: px;
+    height: 180px;
+}
 #selection tr{
 
     float: left;
@@ -512,7 +521,7 @@ p {
 #panelCritere{
     margin-top: 20px;
     margin-left: 225px;
-    width : 71%;
+    width : 40%;
     color:#333;
     background-color: #f5f5f5;
     border-color:#ddd;
@@ -526,5 +535,18 @@ p {
 .btn, .btnConnexion{
 
     width : 100%;
+
+}
+
+maCase, .ui-chkbox-box, .ui-widget, .ui-corner-all, .ui-state-default{
+
+    margin-right: 5px;
+
+}
+
+#panier{
+    margin-top: 5px;
+    margin-right: 5px;
+    float:right;
 
 }
