Sebi : Command link sur le panier et modification du css pour aligner le panier

--- a/Documents/NetBeansProjects/ecoBio/src/main/webapp/assets/bootstrap/css/ecobio-style.css
+++ b/Documents/NetBeansProjects/ecoBio/src/main/webapp/assets/bootstrap/css/ecobio-style.css
@@ -555,3 +555,11 @@ maCase, .ui-chkbox-box, .ui-widget, .ui-corner-all, .ui-state-default{
 
 
 }
+#formPanier{
+    float :left;
+}
+
+.imagePanier{
+    
+     background-image: url('../../custom/img/panier.png')no-repeat top;
+}
